@@ -139,7 +139,7 @@ public class YamlRuleProviderTest {
 
         List<Trigger> triggers = rule.getTriggers();
         assertThat(triggers, hasSize(2));
-        Trigger trigger = triggers.get(0);
+        Trigger trigger = triggers.getFirst();
         assertThat(trigger.getId(), is("2"));
         assertThat(trigger.getLabel(), is(emptyOrNullString()));
         assertThat(trigger.getDescription(), is(emptyOrNullString()));
@@ -156,7 +156,7 @@ public class YamlRuleProviderTest {
 
         List<Condition> conditions = rule.getConditions();
         assertThat(conditions, hasSize(2));
-        Condition condition = conditions.get(0);
+        Condition condition = conditions.getFirst();
         assertThat(condition.getId(), is("3"));
         assertThat(condition.getLabel(), is(emptyOrNullString()));
         assertThat(condition.getDescription(), is(emptyOrNullString()));
@@ -175,7 +175,7 @@ public class YamlRuleProviderTest {
 
         List<Action> actions = rule.getActions();
         assertThat(actions, hasSize(2));
-        Action action = actions.get(0);
+        Action action = actions.getFirst();
         assertThat(action.getId(), is("1"));
         assertThat(action.getLabel(), is(emptyOrNullString()));
         assertThat(action.getDescription(), is(emptyOrNullString()));
@@ -218,7 +218,7 @@ public class YamlRuleProviderTest {
         assertThat(config.getProperties(), hasEntry("sourceItem", "None"));
         List<ConfigDescriptionParameter> configDescriptions = rule.getConfigurationDescriptions();
         assertThat(configDescriptions, hasSize(1));
-        ConfigDescriptionParameter parameter = configDescriptions.get(0);
+        ConfigDescriptionParameter parameter = configDescriptions.getFirst();
         assertThat(parameter.getName(), is("sourceItem"));
         assertThat(parameter.getType(), is(Type.TEXT));
         assertThat(parameter.getContext(), is("item"));
@@ -228,7 +228,7 @@ public class YamlRuleProviderTest {
 
         List<Trigger> triggers = rule.getTriggers();
         assertThat(triggers, hasSize(1));
-        Trigger trigger = triggers.get(0);
+        Trigger trigger = triggers.getFirst();
         assertThat(trigger.getId(), is("1"));
         assertThat(trigger.getLabel(), is(emptyOrNullString()));
         assertThat(trigger.getDescription(), is(emptyOrNullString()));
@@ -242,7 +242,7 @@ public class YamlRuleProviderTest {
 
         List<Action> actions = rule.getActions();
         assertThat(actions, hasSize(1));
-        Action action = actions.get(0);
+        Action action = actions.getFirst();
         assertThat(action.getId(), is("script"));
         assertThat(action.getLabel(), is(emptyOrNullString()));
         assertThat(action.getDescription(), is(emptyOrNullString()));
@@ -280,7 +280,7 @@ public class YamlRuleProviderTest {
         assertThat(config.getProperties(), hasEntry("timeOfDay", "Yes"));
         configDescriptions = rule.getConfigurationDescriptions();
         assertThat(configDescriptions, hasSize(3));
-        parameter = configDescriptions.get(0);
+        parameter = configDescriptions.getFirst();
         assertThat(parameter.getName(), is("timeOfDay"));
         assertThat(parameter.getType(), is(Type.TEXT));
         assertThat(parameter.getContext(), is("item"));
@@ -289,8 +289,8 @@ public class YamlRuleProviderTest {
         assertTrue(parameter.isRequired());
         List<FilterCriteria> filterCriteria = parameter.getFilterCriteria();
         assertThat(filterCriteria, hasSize(1));
-        assertThat(filterCriteria.get(0).getName(), is("type"));
-        assertThat(filterCriteria.get(0).getValue(), is("String"));
+        assertThat(filterCriteria.getFirst().getName(), is("type"));
+        assertThat(filterCriteria.getFirst().getValue(), is("String"));
         parameter = configDescriptions.get(1);
         assertThat(parameter.getName(), is("timesOfDayGrp"));
         assertThat(parameter.getType(), is(Type.TEXT));
@@ -301,8 +301,8 @@ public class YamlRuleProviderTest {
         assertTrue(parameter.isRequired());
         filterCriteria = parameter.getFilterCriteria();
         assertThat(filterCriteria, hasSize(1));
-        assertThat(filterCriteria.get(0).getName(), is("type"));
-        assertThat(filterCriteria.get(0).getValue(), is("Group"));
+        assertThat(filterCriteria.getFirst().getName(), is("type"));
+        assertThat(filterCriteria.getFirst().getValue(), is("Group"));
         parameter = configDescriptions.get(2);
         assertThat(parameter.getName(), is("namespace"));
         assertThat(parameter.getType(), is(Type.TEXT));
@@ -315,7 +315,7 @@ public class YamlRuleProviderTest {
 
         triggers = rule.getTriggers();
         assertThat(triggers, hasSize(3));
-        trigger = triggers.get(0);
+        trigger = triggers.getFirst();
         assertThat(trigger.getId(), is("1"));
         assertThat(trigger.getLabel(), is(emptyOrNullString()));
         assertThat(trigger.getDescription(), is(emptyOrNullString()));
@@ -341,7 +341,7 @@ public class YamlRuleProviderTest {
 
         actions = rule.getActions();
         assertThat(actions, hasSize(1));
-        action = actions.get(0);
+        action = actions.getFirst();
         assertThat(action.getId(), is("3"));
         assertThat(action.getLabel(), is(emptyOrNullString()));
         assertThat(action.getDescription(), is(emptyOrNullString()));
@@ -365,7 +365,7 @@ public class YamlRuleProviderTest {
         assertThat(rule.getConfiguration().getProperties(), is(anEmptyMap()));
         configDescriptions = rule.getConfigurationDescriptions();
         assertThat(configDescriptions, hasSize(4));
-        parameter = configDescriptions.get(0);
+        parameter = configDescriptions.getFirst();
         assertThat(parameter.getName(), is("powerItem"));
         assertThat(parameter.getType(), is(Type.TEXT));
         assertThat(parameter.getContext(), is("item"));
@@ -404,7 +404,7 @@ public class YamlRuleProviderTest {
 
         triggers = rule.getTriggers();
         assertThat(triggers, hasSize(1));
-        trigger = triggers.get(0);
+        trigger = triggers.getFirst();
         assertThat(trigger.getId(), is("1"));
         assertThat(trigger.getLabel(), is(emptyOrNullString()));
         assertThat(trigger.getDescription(), is(emptyOrNullString()));
@@ -417,7 +417,7 @@ public class YamlRuleProviderTest {
 
         actions = rule.getActions();
         assertThat(actions, hasSize(1));
-        action = actions.get(0);
+        action = actions.getFirst();
         assertThat(action.getId(), is("2"));
         assertThat(action.getLabel(), is(emptyOrNullString()));
         assertThat(action.getDescription(), is(emptyOrNullString()));
@@ -456,7 +456,7 @@ public class YamlRuleProviderTest {
 
         List<ConfigDescriptionParameter> configDescriptions = rule.getConfigurationDescriptions();
         assertThat(configDescriptions, hasSize(5));
-        ConfigDescriptionParameter parameter = configDescriptions.get(0);
+        ConfigDescriptionParameter parameter = configDescriptions.getFirst();
         assertThat(parameter.getName(), is("textParam"));
         assertThat(parameter.getLabel(), is("Text parameter"));
         assertThat(parameter.getDescription(), is("This is a text parameter."));
@@ -474,14 +474,14 @@ public class YamlRuleProviderTest {
         assertFalse(parameter.getLimitToOptions());
         List<ParameterOption> options = parameter.getOptions();
         assertThat(options, hasSize(2));
-        assertThat(options.get(0).getLabel(), is("First Option"));
-        assertThat(options.get(0).getValue(), is("1st"));
+        assertThat(options.getFirst().getLabel(), is("First Option"));
+        assertThat(options.getFirst().getValue(), is("1st"));
         assertThat(options.get(1).getLabel(), is("Second Option"));
         assertThat(options.get(1).getValue(), is("2nd"));
         List<FilterCriteria> filterCriterias = parameter.getFilterCriteria();
         assertThat(filterCriterias, hasSize(2));
-        assertThat(filterCriterias.get(0).getName(), is("filter1"));
-        assertThat(filterCriterias.get(0).getValue(), is(".*"));
+        assertThat(filterCriterias.getFirst().getName(), is("filter1"));
+        assertThat(filterCriterias.getFirst().getValue(), is(".*"));
         assertThat(filterCriterias.get(1).getName(), is("filter2"));
         assertThat(filterCriterias.get(1).getValue(), is("a.*"));
         parameter = configDescriptions.get(1);
@@ -555,7 +555,7 @@ public class YamlRuleProviderTest {
 
         List<Trigger> triggers = rule.getTriggers();
         assertThat(triggers, hasSize(2));
-        Trigger trigger = triggers.get(0);
+        Trigger trigger = triggers.getFirst();
         assertThat(trigger.getId(), is("first"));
         assertThat(trigger.getLabel(), is("First Trigger"));
         assertThat(trigger.getDescription(), is("The first trigger."));
@@ -572,7 +572,7 @@ public class YamlRuleProviderTest {
 
         List<Condition> conditions = rule.getConditions();
         assertThat(conditions, hasSize(4));
-        Condition condition = conditions.get(0);
+        Condition condition = conditions.getFirst();
         assertThat(condition.getId(), is("holiday"));
         assertThat(condition.getLabel(), is("Is Holiday"));
         assertThat(condition.getDescription(), is("It must be a holiday."));
@@ -602,7 +602,7 @@ public class YamlRuleProviderTest {
 
         List<Action> actions = rule.getActions();
         assertThat(actions, hasSize(2));
-        Action action = actions.get(0);
+        Action action = actions.getFirst();
         assertThat(action.getId(), is("greet"));
         assertThat(action.getLabel(), is("Greet"));
         assertThat(action.getDescription(), is("Greets the person."));
